--- a/pom.xml
+++ b/pom.xml
@@ -3,15 +3,25 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                       http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.imaginea.cassandra</groupId>
-    <artifactId>triggers</artifactId>
+    <groupId>com.tuplejump.calliope</groupId>
+    <artifactId>castrigger</artifactId>
     <version>1.0</version>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
-            <version>1.7.3</version>
+            <version>1.6.11</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.6.11</version>
         </dependency>
 
         <dependency>
@@ -20,12 +30,6 @@
             <version>1.2.8</version>
         </dependency>
 
-        <!--<dependency>
-            <groupId>org.zeromq</groupId>
-            <artifactId>jzmq</artifactId>
-            <version>2.2.2</version>
-        </dependency>
-            -->
         <dependency>
             <groupId>org.zeromq</groupId>
             <artifactId>zeromq-scala-binding_2.10</artifactId>
@@ -33,9 +37,21 @@
         </dependency>
 
         <dependency>
+            <groupId>com.sun.jna</groupId>
+            <artifactId>jna</artifactId>
+            <version>3.0.9</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.datastax.cassandra</groupId>
             <artifactId>cassandra-driver-core</artifactId>
             <version>1.0.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.jnr</groupId>
+            <artifactId>jnr-constants</artifactId>
+            <version>0.8.4</version>
         </dependency>
 
     </dependencies>
@@ -60,6 +76,17 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+
+
+            <plugin>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <version>2.4</version>
+            <configuration>
+                <descriptors>
+                    <descriptor>src/main/assembly/assembly.xml</descriptor>
+                </descriptors>
+            </configuration>
             </plugin>
 
             <plugin>
