--- a/src/main/resources/calliope-config.properties
+++ b/src/main/resources/calliope-config.properties
@@ -16,6 +16,7 @@
 # limitations under the License.
 #
 
-clusterNode=127.0.0.1
-Trigger.keyspace=triggers
-Trigger.columnFamily=triggers
+cluster.node=127.0.0.1
+cluster.port=9042
+trigger.keyspace=triggers
+trigger.cf=triggers
