--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,12 @@
             <version>1.0.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+        </dependency>
+
     </dependencies>
 
 
