--- a/pom.xml
+++ b/pom.xml
@@ -186,35 +186,35 @@
             <maxmem>1024m</maxmem>
           </configuration>
         </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.12.4</version>
-          <configuration>
-            <!-- Uses scalatest instead -->
-            <skipTests>true</skipTests>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.scalatest</groupId>
-          <artifactId>scalatest-maven-plugin</artifactId>
-          <version>1.0-M2</version>
-          <configuration>
-            <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
-            <junitxml>.</junitxml>
-            <filereports>${project.build.directory}/SparkTestSuite.txt</filereports>
-            <argLine>-Xms64m -Xmx3g</argLine>
-            <stderr />
-          </configuration>
-          <executions>
-            <execution>
-              <id>test</id>
-              <goals>
-                <goal>test</goal>
-              </goals>
-            </execution>
-          </executions>
-        </plugin>
+        <!-- Enable following to support scala test -->
+        <!-- <plugin> -->
+        <!--   <groupId>org.apache.maven.plugins</groupId> -->
+        <!--   <artifactId>maven-surefire-plugin</artifactId> -->
+        <!--   <version>2.12.4</version> -->
+        <!--   <configuration> -->
+        <!--     <skipTests>true</skipTests> -->
+        <!--   </configuration> -->
+        <!-- </plugin> -->
+        <!-- <plugin> -->
+        <!--   <groupId>org.scalatest</groupId> -->
+        <!--   <artifactId>scalatest-maven-plugin</artifactId> -->
+        <!--   <version>1.0-M2</version> -->
+        <!--   <configuration> -->
+        <!--     <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory> -->
+        <!--     <junitxml>.</junitxml> -->
+        <!--     <filereports>${project.build.directory}/SparkTestSuite.txt</filereports> -->
+        <!--     <argLine>-Xms64m -Xmx3g</argLine> -->
+        <!--     <stderr /> -->
+        <!--   </configuration> -->
+        <!--   <executions> -->
+        <!--     <execution> -->
+        <!--       <id>test</id> -->
+        <!--       <goals> -->
+        <!--         <goal>test</goal> -->
+        <!--       </goals> -->
+        <!--     </execution> -->
+        <!--   </executions> -->
+        <!-- </plugin> -->
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
