fixed bugs in ZMQ publisher exported props as a DAO exposed cong for user convenience fixed bugs in scripts

--- a/conf/calliope-config.properties
+++ b/conf/calliope-config.properties
@@ -16,7 +16,17 @@
 # limitations under the License.
 #
 
+## Cassandra cluster connecting node
 cluster.node=127.0.0.1
 cluster.port=9042
+
+## Trigger keyspace
 trigger.keyspace=triggers
 trigger.cf=triggers
+
+
+## ZMQ publisher
+zmq.port=5555
+
+## File publisher
+file.path=/var/lib/cassandra/calliopestream.dat
